Test runtime/CommandLine/OptionsValidation/TestOptionsWithRanges fails after JDK-8227123

XMLWordPrintable

    • 14
    • b08
    • Verified

      JDK-8227123 updated the test so that experimental and diagnostic flags are also tested. We now see a crash when testing an experimental flag:

      TEST FAILED: Error processing option SurvivorAlignmentInBytes with valid value '-server -XX:+UseParallelGC -XX:SurvivorAlignmentInBytes=2147483648'! JVM output reports a fatal error. JVM exited with code 134 [0x86]!

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (open/src/hotspot/share/gc/parallel/psPromotionLAB.inline.hpp:45), pid=25256, tid=25441
      # assert(is_aligned(obj, SurvivorAlignmentInBytes) && is_object_aligned(new_top)) failed: checking alignment
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0+8) (fastdebug build 14-ea+8-243)

      Unclear whether the test needs fixing or the range for the flag needs to be more constrained. Assigning to runtime initially to consider that question.

            Assignee:
            Coleen Phillimore
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: