8228855: Test runtime/CommandLine/OptionsValidation/TestOptionsWithRanges fails after JDK-8227123

Give SurvivorAlignmentInBytes a range same as ObjectAlignmentInBytes

Reviewed-by: shade